# WinGetManifestGeneratorTool

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitignore.new  .pre-commit-config.yaml  AttachGitHubToken.py  BRANDING_UPDATE_COMPLETE.md  CODE_WORKFLOW_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CreatePRs.py  DIRECT_ORGANIZATION_COMPLETE.md  Dockerfile  ExtractGitHubReleases.py  ExtractPackageName.py  FindLatestVer.py  GitHub_Release.csv  GitHub_Releasess.csv  GitHub_Releasessss.csv  HOW_TO_RUN.md  IMPORT_FIX_COMPLETE.md  LICENSE  MULTI_SOURCE_ARCHITECTURE.md  Makefile  Makefile.new  ORGANIZATION_COMPLETE.md  OpenIssues.py  OpenPRs.csv  OpenPRs.py  OpenPRs.txt  PACKAGEPROCESSOR_OPTIMIZATION.md  PROGRESS_TRACKER_FIX.md  PROJECT_METADATA.md  PROJECT_REORGANIZATION.md  QUICK_START.md  README.md  README.new.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md  (+31 more)
.github/: action.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: action.yml  action2.yml  action3.yml  action4.yml  blank.yml  ci.yml  new.yml  script.yml
config/: config.development.yaml  config.example.yaml  config.multi-source.example.yaml  config.yaml  development.yaml  production.yaml  staging.yaml
data/: GitHub_Release.csv  GitHub_Releasess.csv  GitHub_Releasessss.csv  OpenPRs.csv  OpenPRs.txt  filenames.csv  komac_update_commands_github.txt  urls.txt
data copy/: AllPackageInfo.csv  GitHubPackageInfo_Filter1.csv  GitHubPackageInfo_Filter3.csv  GitHubPackageInfo_Filter5.csv  GitHubPackageInfo_Filter5_5.csv  GitHubPackageInfo_Filter6.csv  GitHubPackageInfo_Filter7.csv  GitHubPackageInfo_Filter8.csv  OpenPRs.csv  PackageNames.csv  RemovedRows.csv  komac_update_commands_github.txt
data/github/: GitHubPackageInfo.csv  GitHubPackageInfo_CleanedURLs.csv  GitHubPackageInfo_Filter1.csv  GitHubPackageInfo_Filter2.csv  GitHubPackageInfo_Filter3.csv  GitHubPackageInfo_Filter4.csv  GitHubPackageInfo_Filter5.csv  GitHubPackageInfo_Filter5_5.csv  GitHubPackageInfo_Filter6.csv  GitHubPackageInfo_Filter7.csv  GitHubPackageInfo_Filter8.csv  RemovedRows.csv  komac_update_commands_github.txt
docs/: MIGRATION_GUIDE.md  MULTI_SOURCE_IMPLEMENTATION.md  README.md
docs/development/: CONFIGURATION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MONITORING_IMPLEMENTATION.md  MULTI_SOURCE_ARCHITECTURE.md  TESTING.md
docs/user-guide/: CONFIGURATION.md  LEGACY_MIGRATION.md
examples/: README.md  integration_demo.py  legacy_workflow.py  migration_example.py
legacy/: CreatePRs.py  ExtractGitHubReleases.py  ExtractPackageName.py  OpenPRs.py
legacy/.github/workflows/: action.yml
old/: CreatePRs.py  ExtractPackageName.py
quick_test/: test_input.csv
scripts/: README.md  migrate_to_multi_source.py  organize_removed_rows.py  organize_removed_rows_simple.py  run_tests.py  test_config.py  test_legacy_compatibility.py  test_monitoring.py
src/: GitHub.py  KomacCommandsGenerator.py  PackageProcessor.py  __init__.py  requirements.txt
src/config/: __init__.py  manager.py  schema.py
src/core/: base.py  constants.py  interfaces.py  multi_source_processor.py  package_sources.py  processor.py
src/github/: AsyncPullRequestSearcher.py  Filter.py  GitHubPackageProcessor.py  MatchSimilarURLs.py  PullRequestSearcher.py
src/monitoring/: __init__.py  logging.py  logging_setup.py  metrics.py
src/sources/: __init__.py  __init___new.py  github.py  github_processor.py  github_source.py  gitlab.py  gitlab_source.py  registry.py  sourceforge.py  sourceforge_source.py
src/sources/base/: __init__.py  filter_base.py  url_matcher.py
src/sources/github/: github_source.py
src/sources/gitlab/: __init__.py  gitlab_source.py
src/sources/sourceforge/: __init__.py  sourceforge_source.py
src/utils/: __init__.py  file_utils.py  token_manager.py  unified_utils.py  version_pattern_utils.py
src/winget_automation/: GitHub.py  KomacCommandsGenerator.py  PackageProcessor.py  __init__.py  cli.py  exceptions.py
src/winget_automation/config/: __init__.py  manager.py  schema.py
src/winget_automation/core/: __init__.py
src/winget_automation/github/: Filter.py  GitHubPackageProcessor.py
src/winget_automation/monitoring/: health.py  progress.py
src/winget_automation/utils/: __init__.py  unified_utils.py
test_data/: test_input.csv
tests/: __init__.py  conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_integration.py
tests/unit/: test_config.py  test_package_processor.py  test_token_manager.py
